5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1593_1802.log
== TEST (2019-03-26 11:30:13) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt((5 * d1) + (pi ** (d2/3))))
print(dano)

-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:30:48) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3))))
print(dano)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:28) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:32:54) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:07) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dan = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
print(dan)

-- ERROR:
File "XXXX", line 7
    print(dan)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:24) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dan = (floor(sqrt(5 * d1) + (pi ** (d2/3)))
print(int(dan))

-- ERROR:
File "XXXX", line 7
    print(int(dan))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:51) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dan = (floor(sqrt(5 * d1) + pi ** (d2/3))
print(int(dan))

-- ERROR:
File "XXXX", line 7
    print(int(dan))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:34:33) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dan = (floor(sqrt(5 * d1) + pi ** (d2/3))
print(dan)

-- ERROR:
File "XXXX", line 7
    print(dan)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:35:16) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dan = (floor(sqrt(5 * d1) + (pi ** (d2/3))
print(dan)

-- ERROR:
File "XXXX", line 7
    print(dan)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:38:21) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = floor(sqrt(5 * d1) + (pi ** (d2/3))
print(dano)

-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:38:49) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = floor(sqrt(5 * d1) + (pi ** (d2/3))
print(pv - dano)

-- ERROR:
File "XXXX", line 7
    print(pv - dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:39:12) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
print(pv - dano)

-- ERROR:
File "XXXX", line 7
    print(pv - dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:40:14) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = pv - dano
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = pv - dano
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:05:29) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = pv - dano
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = pv - dano
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:07:59) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = (pv - dano)
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = (pv - dano)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:09:22) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = (pv-dano)
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = (pv-dano)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:09:32) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dano = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = (pv+dano)
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = (pv+dano)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:12:12) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = (pv - dano)
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = (pv - dano)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:12:31) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = float(floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = pv - dano
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = pv - dano
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:12:40) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = (floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = pv - dano
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = pv - dano
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:13:13) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = (floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = pv - dano
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = pv - dano
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:13:20) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = (floor(sqrt(5 * d1) + (pi ** (d2/3)))
vida = pv - dam
print(vida)

-- ERROR:
File "XXXX", line 7
    vida = pv - dam
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:14:03) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = (floor(sqrt(5 * d1) + (pi ** (d2/3)))
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:15:34) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int((sqrt(5 * d1) + (pi ** (d2/3))
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:16:15) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int((sqrt(5 * d1) + pi ** (d2/3))
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:17:02) 
-- CODE:
from math import *
pv = float(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1 + pi ** d2/3))
lif = pv - dam
print(lif)

-- OUTPUT:
182.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:18:14) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1 + pi ** d2/3))
lif = pv - dam
print(lif)

-- OUTPUT:
182
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:18:50) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1 + pi ** (d2/3))
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:18:57) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1 + pi ** (d2/3)
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:19:14) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1 + pi ** (d2/3)))
lif = pv - dam
print(lif)

-- OUTPUT:
197
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:10) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1 + pi ** (d2/3))
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:23) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = sqrt(5 * d1 + pi ** (d2/3)
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:49) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1 + pi ** (d2/3))
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:26:41) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1 + pi ** (d2/3)
lif = pv - dam
print(lif)

-- ERROR:
File "XXXX", line 7
    lif = pv - dam
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:29:00) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1) + pi ** (d2/3))
lif = pv - dam
print(lif)

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:29:27) 
-- CODE:
from math import *
pv = int(input("Informe os pontos de vida do monstro: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

dam = int(sqrt(5 * d1) + pi ** (d2/3))
lif = pv - dam
print(lif)

-- EXECUTION TIME:
0.163292
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
